<resources>
    <string name="app_name">SE2_EBsp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gib_deine_matrikelnummer_ein">Gib deine Matrikelnummer ein:</string>
    <string name="button">Button</string>
    <string name="abschiken">abschiken</string>
    <string name="antwort_vom_server">Antwort vom Server</string>
    <string name="primzahlen_in_deiner_matrikelnummer">Primzahlen in deiner Matrikelnummer</string>
    <string name="primzahlen">Primzahlen</string>
</resources>